# graphql-int64-scalar

./: Cargo.toml  README.md
src/: async_graphql.rs  cynic.rs  lib.rs
tests/: async_graphql_and_cynic.rs  schema.graphql
